--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h2 class="text-center">最新国内31省份疫情</h2>
-<a href="https://123github0123.github.io/data/data.html"><h5 class="text-center">查看全国疫情信息</h5></a>
+<a href="data.html"><h5 class="text-center">查看全国疫情信息</h5></a>
 <table class="table table-striped table-hover mx-auto text-center">
     <thead>
         <tr>
